# copac

./: .coveragerc  .travis.yml  MANIFEST.in  README.md  README.rst  copac.py  documentation  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  snippets.ipynb
.github/workflows/: python-app.yml
cluster/: __init__.py  copac.py  perf.ipynb  test.ipynb  test2.ipynb
cluster/evaluation/: Evaluation.ipynb  Evaluation_artificial.ipynb  Evaluation_real.ipynb  elki.py
copac/: __init__.py  copac.py
copac/evaluation/: elki.py
copac/tests/: perf.ipynb  test.ipynb  test2.ipynb  test_copac.py
recipes/: exercise5.ipynb
