[bdist_wheel]
universal = true

[metadata]
name = COPAC
version = "0.3.0"
author = Roman Feldbauer
author_email = sci@feldbauer.org
url = https://github.com/VarIr/copac
description = Correlation partition clustering
long_description = file: README.rst
long_description_content_type = text/restructured
license = GPLv3
keywords = "machine learning" "data science" "data mining"
platform = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3",
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/VarIr/copac/issues

[options]
package_dir=
    =copac
python_requires = >= 3.9
packages = find:
# The following plus setuptools-scm include all version-controlled files in the package.
include_package_data = True
install_requires =
    numpy
    scikit-learn
    scipy
    pytest

[options.packages.find]
where = copac

# Setup requirements also here for legacy packaging tools; pyproject.toml is the preferred place
setup_requires =
    setuptools
    setuptools_scm
    wheel
